# project-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
design/: .phase  CLAUDE.md  design.md  open-questions.md  scope.md
design/decisions/: 2026-04-27-language-and-framework.md  2026-04-27-manifest-as-source-of-truth.md  2026-04-27-plan-1-implementation-fixes.md  2026-04-28-plan-2-implementation-fixes.md  2026-04-29-plan-4.5-pre-plan-5-cleanup.md  2026-04-29-plan-5-plugin-model.md  2026-05-04-monorepo-for-first-party-plugins.md  2026-05-05-data-model-redesign.md  2026-05-11-user-hooks-framework.md
design/plans/: 2026-04-27-project-cli-foundation.md  2026-04-28-cleanup-before-plan-3.md  2026-04-28-deliverable-decision-phase.md  2026-04-29-migration-completion-cutover.md  2026-04-29-plan-4.5-pre-plan-5-cleanup.md  2026-04-29-plan-5-milestones-and-plugins.md  2026-04-30-plan-5.1-simplification-and-hardening.md  2026-05-01-plan-5.2-api-consistency.md  2026-05-01-plan-5.3-docs-truth.md  2026-05-01-plan-5.4-api-and-code-health.md  2026-05-01-plan-5.5-visibility.md  2026-05-01-plan-6-extensibility-hardening.md  2026-05-01-plan-7-customizable-lifecycles.md  2026-05-05-plan-8-data-model-redesign.md  2026-05-11-plan-9-user-hooks.md
design/specs/: 2026-05-01-customizable-lifecycles-design.md  2026-05-05-data-model-redesign.md  2026-05-11-user-hooks-design.md
plugins/jira/: .gitignore  LICENSE  README.md  pyproject.toml
plugins/jira/design/: scope.md
plugins/jira/src/keel_jira/: __init__.py  client.py  config.py  provider.py  templates.py
plugins/jira/tests/: conftest.py  test_client.py  test_config.py  test_provider.py
src/keel/: __init__.py  __main__.py  api.py  app.py  dryrun.py  errors.py  git_ops.py  lifecycle.py  manifest.py  markdown_edit.py  milestones.py  output.py  phase_events.py  prompts.py  templates.py  util.py  workspace.py
src/keel/_templates/: claude_md.j2  design_md.j2  hooks_readme.md.j2  lifecycle.toml.j2  readme_md.j2  scope_md.j2
src/keel/commands/: archive.py  completion.py  list.py  list_cmd.py  migrate.py  new.py  phase.py  rename.py  restore.py  show.py  validate.py
src/keel/commands/code/: __init__.py  add.py  init.py  list.py  rm.py  status.py
src/keel/commands/decision/: __init__.py  list.py  new.py  rm.py  show.py
src/keel/commands/deliverable/: __init__.py  add.py  list.py  rename.py  rm.py
src/keel/commands/design/: __init__.py  export.py
src/keel/commands/hooks/: __init__.py  init.py  list.py
src/keel/commands/lifecycle/: __init__.py  init.py  list.py  show.py  validate.py
src/keel/commands/manifest_cli/: __init__.py  validate.py
src/keel/commands/milestone/: __init__.py  add.py  cancel.py  done.py  list.py  rm.py  show.py  start.py
src/keel/commands/plugin/: __init__.py  doctor.py  list.py
src/keel/commands/task/: __init__.py  add.py  cancel.py  done.py  graph.py  list.py  move.py  next.py  rm.py  show.py  start.py  worktree.py
src/keel/hooks/: __init__.py  builtin_listeners.py  dispatcher.py  hookable.py  loader.py  registry.py  scripts.py  types.py
src/keel/lifecycles/: __init__.py  loader.py  models.py
src/keel/lifecycles/defaults/: __init__.py  default.toml
src/keel/manifest/: __init__.py  io.py  models.py  queries.py
src/keel/preflights/: __init__.py  base.py  builtin.py  registry.py
src/keel/testing/: __init__.py
src/keel/ticketing/: __init__.py  base.py  mock.py  registry.py
src/project_cli/: __init__.py  __main__.py  app.py  dryrun.py  manifest.py  markdown_edit.py  output.py  prompts.py  templates.py
src/project_cli/_templates/: claude_md.j2  decision_entry.j2
src/project_cli/commands/: list_cmd.py  new.py  show.py
tests/: conftest.py  test_api.py  test_dryrun.py  test_git_ops.py  test_lifecycle.py  test_manifest.py  test_markdown_edit.py  test_milestones_graph.py  test_output.py  test_phase_events.py  test_preflights.py  test_preflights_builtin.py  test_preflights_registry.py  test_prompts.py  test_templates.py  test_ticketing.py  test_workspace.py
tests/commands/: test_archive.py  test_completion.py  test_list.py  test_migrate.py  test_new.py  test_phase.py  test_rename.py  test_restore.py  test_show.py  test_slugify.py  test_validate.py
tests/commands/code/: test_add.py  test_init.py  test_list.py  test_rm.py  test_status.py
tests/commands/decision/: test_list.py  test_new.py  test_rm.py  test_show.py
tests/commands/deliverable/: test_add.py  test_list.py  test_rename.py  test_rm.py
tests/commands/design/: test_export.py
tests/commands/hooks/: __init__.py  test_init.py  test_list.py
tests/commands/lifecycle/: test_init.py  test_list.py  test_show.py  test_validate.py
tests/commands/manifest_cli/: test_validate.py
tests/commands/milestone/: test_add.py  test_list.py  test_rm.py  test_show.py  test_transitions.py
tests/commands/plugin/: test_doctor.py  test_list.py
tests/commands/task/: test_add.py  test_graph.py  test_list.py  test_move.py  test_next.py  test_rm.py  test_show.py  test_transitions.py  test_worktree.py
tests/hooks/: __init__.py  test_builtin_listeners.py  test_dispatcher.py  test_hookable.py  test_loader.py  test_registry.py  test_scripts.py  test_types.py
tests/lifecycles/: test_defaults.py  test_loader.py  test_models.py
