[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keel-cli"
version = "0.0.1"
description = "CLI for the projects workspace"
requires-python = ">=3.11"
authors = [{ name = "Andrei Matei" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.6",
    "markdown-it-py>=3",
    "jinja2>=3.1",
    "tomlkit>=0.13",
    "questionary>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-snapshot>=0.9",
    "ruff>=0.6",
]
# Plugin extras will live here once first-party plugins are published to
# PyPI (e.g. `jira = ["keel-jira>=0.1"]` for `pip install keel-cli[jira]`).
# Until then, install plugins directly from the monorepo source — see
# README "Install" section.

[project.scripts]
keel = "keel.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/keel"]
include = ["src/keel/_templates/*.j2", "src/keel/lifecycles/defaults/*.toml"]

# uv workspace: every package under plugins/ is a co-developed member.
# Each member ships as its own PyPI wheel (own pyproject.toml, own version),
# but during local development they resolve each other from the working tree.
[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
keel-jira = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplifications
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument default (Typer requires this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B"]  # tests can have less-strict bugbear

[tool.ruff.format]
quote-style = "double"
